WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161076
DOMTokenList’s value and stringifier should not return parsed tokens
https://bugs.webkit.org/show_bug.cgi?id=161076
Summary
DOMTokenList’s value and stringifier should not return parsed tokens
Ryosuke Niwa
Reported
2016-08-23 00:32:09 PDT
The latest DOM spec requires that we forward call getAttribute/setAttribute to get and set value and stringify DOMTokenList.
Attachments
Patch
(16.40 KB, patch)
2016-08-23 00:44 PDT
,
Ryosuke Niwa
cdumez
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-08-23 00:44:06 PDT
Created
attachment 286688
[details]
Patch
Chris Dumez
Comment 2
2016-08-23 07:02:03 PDT
Comment on
attachment 286688
[details]
Patch The spec has changed recently after we implemented it. I am working on getting the spec back the way it was. Our current behavior is nicer, this patch makes it worse.
Chris Dumez
Comment 3
2016-08-23 07:03:24 PDT
See
https://github.com/whatwg/dom/issues/105#issuecomment-240378531
Chris Dumez
Comment 4
2016-08-23 07:36:25 PDT
Let's discuss today in person.
Chris Dumez
Comment 5
2016-08-24 15:15:38 PDT
Comment on
attachment 286688
[details]
Patch r=me. Looks like getting the spec changed back is going to be difficult.
WebKit Commit Bot
Comment 6
2016-08-27 17:27:09 PDT
Comment on
attachment 286688
[details]
Patch Rejecting
attachment 286688
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 286688, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: Log Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/imported/w3c/web-platform-tests/dom/lists/DOMTokenList-stringifier-expected.txt patching file LayoutTests/imported/w3c/web-platform-tests/dom/lists/DOMTokenList-value-expected.txt patching file LayoutTests/imported/w3c/web-platform-tests/dom/nodes/Element-classlist-expected.txt Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Chris Dumez']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/1956506
Chris Dumez
Comment 7
2016-09-27 21:12:00 PDT
Ryosuke, I think we can land this, no?
Ryosuke Niwa
Comment 8
2016-09-27 21:21:17 PDT
(In reply to
comment #7
)
> Ryosuke, I think we can land this, no?
Oh, I didn't realize that this patch hadn't been landed. I guess CQ failed?
Chris Dumez
Comment 9
2016-09-27 21:22:05 PDT
(In reply to
comment #8
)
> (In reply to
comment #7
) > > Ryosuke, I think we can land this, no? > > Oh, I didn't realize that this patch hadn't been landed. I guess CQ failed?
Looks like the CQ failed because the patch needs rebasing, yes.
Ryosuke Niwa
Comment 10
2016-09-27 21:25:37 PDT
(In reply to
comment #9
)
> (In reply to
comment #8
) > > (In reply to
comment #7
) > > > Ryosuke, I think we can land this, no? > > > > Oh, I didn't realize that this patch hadn't been landed. I guess CQ failed? > > Looks like the CQ failed because the patch needs rebasing, yes.
Okay, let me rebase & land it tomorrow morning. Or feel free to land it if you'd like.
Ryosuke Niwa
Comment 11
2016-09-28 16:37:15 PDT
Committed
r206560
: <
http://trac.webkit.org/changeset/206560
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug