DOMTokenList’s value and stringifier should not return parsed tokens https://bugs.webkit.org/show_bug.cgi?id=161076

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Rebaselined tests that are now passing.

* web-platform-tests/dom/lists/DOMTokenList-stringifier-expected.txt:
* web-platform-tests/dom/lists/DOMTokenList-value-expected.txt:
* web-platform-tests/dom/nodes/Element-classlist-expected.txt:

Source/WebCore:

Updated our implementation of DOMTokenList.prototype.value and its toString function
to match the latest DOM specification: https://dom.spec.whatwg.org/#interface-domtokenlist

"value" attribute, on getting, runs its serialize steps, which simply gets the attribute value.
On setting, it sets the attribute value with the given value.

The stringification behavior returns the same serialize steps as "value" attribute on getting.

This change simplifies our implementation of DOMTokenList and removes the need for m_cachedValue,
which has been removed in this patch.

No new tests since existing tests cover this.

* html/DOMTokenList.cpp:
(WebCore::DOMTokenList::value): Just call getAttribute.
(WebCore::DOMTokenList::setValue): Just call setAttribute.
(WebCore::DOMTokenList::updateTokensFromAttributeValue):
(WebCore::DOMTokenList::associatedAttributeValueChanged):
(WebCore::DOMTokenList::updateAssociatedAttributeFromTokens): Moved the code to update the tokens
from from the attribute value. This is the "update steps".
* html/DOMTokenList.h:

LayoutTests:

Added more test cases and rebaselined tests. Most of changes are due to the change that DOMTokenList's value
and stringifier now returns the original attribute value with extra whitespaces.

* fast/dom/HTMLLinkElement/sizes-setter-expected.txt:
* fast/dom/HTMLLinkElement/sizes-setter.html:
* fast/dom/HTMLOutputElement/dom-settable-token-list-expected.txt:
* fast/dom/HTMLOutputElement/htmloutputelement-expected.txt:
* fast/dom/HTMLOutputElement/htmloutputelement.html:
* fast/dom/HTMLOutputElement/script-tests/dom-settable-token-list.js:
* fast/frames/sandbox-attribute-expected.txt:
* fast/frames/sandbox-attribute.html:


Canonical link: https://commits.webkit.org/180651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206560 268f45cc-cd09-0410-ab3c-d52691b4dbfc